pre testing